# Scribe

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  worker.py
bot/: __init__.py  exceptions.py
bot/cogs/: admin.py  listeners.py  user.py
bot/db/: crud.py  models.py  session.py
bot/services/: formatting.py  glossary.py  langid.py  metrics.py  ratelimit.py  spans.py  webhooks.py
bot/services/translator/: base.py  deepl.py  google.py  openai.py
scripts/: sync_commands.py
src/scribe/: __init__.py  bot.py  db.py  logging_config.py  settings.py
src/scribe/cogs/: __init__.py  admin.py  bookmarks.py  notes.py  reminders.py  utility.py
tests/: test_config.py  test_glossary.py  test_langid.py  test_spans.py  test_timespec.py
